iCalendar 2.0 (2008-07-11)
==========================

API Changes:

* EXDATE and RDATE now returns a vDDDLists object, which contains a list
  of vDDDTypes objects. This is do that EXDATE and RDATE can contain
  lists of dates, as per RFC.
  
  ***Note!***: This change is incompatible with earlier behavior, so if you
  handle EXDATE and RDATE you will need to update your code.


iCalendar 1.2 (2006-11-25)
==========================

* Fixed a string index out of range error in the new folding code.